add stripe enrollment view
